# farm-terminal

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  lint_python.yml  quality.yml
farm_terminal/: crop_catalog.py  planting.py  sensor_plot.py  sensor_upload.py
