[tool.poetry]
name = "farm-terminal"
version = "0.1.0"
description = ""
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
fuzzyfinder = "^2.1.0"
prompt-toolkit = "^3.0.36"
click = "^8.1.3"
Pygments = "^2.14.0"
farmos-ext = { git="https://github.com/applecreekacres/farmos.py.ext"}
farmOS = "^0.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
rope = "^1.5.1"
pycodestyle = "^2.10.0"
pydocstyle = "^6.2.2"
pylint = "^2.15.8"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
