[tool.poetry]
name = "farm-terminal"
version = "0.1.0"
description = ""
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
fuzzyfinder = "^2.1.0"
prompt-toolkit = "^3.0.41"
click = "^8.1.7"
Pygments = "^2.17.2"
farmos-ext = { git="https://github.com/applecreekacres/farmos.py.ext"}
farmOS = "^0.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"
rope = "^1.11.0"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
pylint = "^3.0.2"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
